--- a/index.html
+++ b/index.html
@@ -1,7 +1,1 @@
-<!DOCTYPE html>
-<html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
-</html>
+<!DOCTYPE html><html lang=zh-CN><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><title>omiomi</title><link href=/static/css/app.b4e055e3615810848c7502283ef5ceaa.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=/static/js/manifest.cc1487fb72f2cfb2b76e.js></script><script type=text/javascript src=/static/js/vendor.d6821e349a74dab4ebc5.js></script><script type=text/javascript src=/static/js/app.4f0358ae60d3532628c3.js></script></body></html>
